--- a/console/Console.csproj
+++ b/console/Console.csproj
@@ -131,7 +131,7 @@
   -->
   <PropertyGroup>
     <PostBuildEvent>"$(SolutionDir)\packages\ILMerge.2.14.1208\tools\ilmerge.exe" /target:exe /out:SchemaZen.exe console.exe SchemaZen.Library.dll ManyConsole.dll NDesk.Options.dll
-</PostBuildEvent>
+$(FramingPreReqs)\signcode.bat SchemaZen.exe</PostBuildEvent>
   </PropertyGroup>
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
 </Project>
