--- a/model/Library.csproj
+++ b/model/Library.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Models\ForeignKey.cs" />
     <Compile Include="Models\Identity.cs" />
     <Compile Include="Models\Interfaces.cs" />
+    <Compile Include="Models\SecurityPolicy.cs" />
     <Compile Include="Models\UserDefinedType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Role.cs" />
